Fix various bugs: - Inspect Calculation Horizontal Axis - Stacked Bar Chart: Prevent Buggy Zooming - Download Margins not being considered - Cartesian Grid not working properly in chrome (checkVisibility not working properly in chrome)

--- a/src/packages/respvis-core/css/chart/toolbar/control-element.css
+++ b/src/packages/respvis-core/css/chart/toolbar/control-element.css
@@ -68,7 +68,9 @@
     input[type="checkbox"] {
       appearance: none; /* Remove default styling */
       width: 0.8125rem;
+      min-width: 0.8125rem;
       height: 0.8125rem;
+      min-height: 0.8125rem;
       border: 1px solid var(--checkbox-color);
       border-radius: 2px;
       position: relative;
